x added: `PAUSESERVER(name, pause)` pauses web server (alias for `F.wait()`)
- added: `PROXY(endpoint, hostname, [before_fn(uri,req,res)], [after_fn(res)])` makes a direct proxy from webserver
- added: `schema.middleware(function($, next))` for creating simple middlewares for Schema operations
- added: `FILE404(fn(req, res))` performs a simple fallback for non-existing files

x updated: `$.invalid()` without arguments can return a function `function(err)`
x updated: Mail `unsubscribe` appends new header which enables `unsubscribe` in e.g. iOS
x updated: `MODIFY`, handler contains a new argument `controller`
x updated: `headers` argument in `controller.proxy` supports `flags: []` for REQEUST method
x updated: `.filefs()` and `.filenosql()` supports `download` with `true` or with `(name, type) => 'new_name'` (`filename` will be read from NoSQL binary file)
x updated: `$.done(arg)` argument `@arg` can be `boolean` (response will be as a value) or object/primitive value (`arg` will be as a value)
x updated: `String.arg(obj, [encode], [def])` added `encode` (`true` or `json`) and `def` arguments
x updated: `AUTH(req, res, flags, next)` and `next` function can handle `callback(err, user)`
x updated: `REQUEST()` supports `keepalive` flag
x updated: `bundles` mechanism supports merging files `--filename` between `bundles` files
x updated: `String.hash(true)` returns unsigned int
x updated: `CONF:default_image_converter` supports `magick` for new version of ImageMagick
x updated: `CONF.default_image_consumption` can contain ZERO value which means disabled optimialization of CPU/memory consumption
x updated: `CONF.default_image_consumption` has changed a default value to `0`
x updated: `U.parseXML(str, [replace])` and `String.parseXML([replace])` contains a new argument called `replace`
x updated: `LOAD()` added a callback function
x updated: components support `encoding="utf8"` attribute for `<file` tag (default: `base64`)